--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,7 +3,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: #fc1e8a;
+  background: #c18430;
   user-select: none;
 }
 
@@ -17,8 +17,8 @@ body {
   background: linear-gradient(
     325deg,
     #03001e 0%,
-    #7303c0 30%,
-    #ec38bc 70%,
+    #d34720 30%,
+    #c17833 70%,
     #fdeff9 100%
   );
   padding: 40px 60px;
@@ -42,11 +42,12 @@ h2 {
   text-transform: uppercase;
   cursor: pointer;
   font-weight: 600;
+  border-radius: 10px;
 }
 
 .reset:focus {
-  color: #ec38bc;
-  background-color: #262809;
+  color: #ff8400;
+  background-color: #20201d;
 }
 
 .game {
@@ -71,6 +72,7 @@ h2 {
   font-size: 3em;
   transform: rotateY(180deg);
   transition: 0.25s;
+  border-radius: 50px;
 }
 
 .item::after {
@@ -82,6 +84,7 @@ h2 {
   transition: 0.25s;
   transform: rotateY(0deg);
   backface-visibility: hidden;
+  border-radius: 6px;
 }
 
 .item.boxOpen {
